docs: first unit test, update java pom.