@@ -1,37 +1,21 @@
 package com.verdanttechs.jakarta.ee9;
 
 import java.util.Vector;
-import java.lang.Math;
 
+import com.verdanttechs.jakarta.ee9.type.GsIPCResultType;
 import org.msgpack.core.MessagePack;
-import org.msgpack.core.MessagePack.PackerConfig;
-import org.msgpack.core.MessagePack.UnpackerConfig;
 import org.msgpack.core.MessageBufferPacker;
-import org.msgpack.core.MessageFormat;
-import org.msgpack.core.MessagePacker;
 import org.msgpack.core.MessageUnpacker;
 import org.msgpack.value.ArrayValue;
-import org.msgpack.value.ExtensionValue;
-import org.msgpack.value.FloatValue;
-import org.msgpack.value.IntegerValue;
-import org.msgpack.value.TimestampValue;
 import org.msgpack.value.Value;
-import org.msgpack.core.annotations.Nullable;
-import org.msgpack.core.annotations.VisibleForTesting;
 
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
-import jakarta.annotation.Resource;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpSession;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.ServletContextListener;
-import jakarta.servlet.ServletContext;
-import jakarta.servlet.ServletContextEvent;
-import jakarta.servlet.ServletContextListener;
-import jakarta.servlet.annotation.WebListener;
 
 import jakarta.jms.Connection;
 import jakarta.jms.Session;
@@ -42,9 +26,6 @@ import jakarta.jms.MessageConsumer;
 import jakarta.jms.DeliveryMode;
 import jakarta.jms.TextMessage;
 import jakarta.jms.BytesMessage;
-import jakarta.jms.Topic;
-import jakarta.jms.Queue;
-import jakarta.jms.ConnectionFactory;
 import jakarta.jms.JMSException;
 import jakarta.jms.ExceptionListener;
 
@@ -57,35 +38,13 @@ import com.google.gson.JsonElement;
 import org.apache.activemq.ActiveMQConnectionFactory;
 
 import java.io.IOException;
+import java.util.logging.Logger;
 
 
 @WebServlet("/monitor")
 public class MonitorServlet extends HttpServlet {
 
-    // NOTE - these should reflect types in gs_ipc_result
-    public enum GsIPCResultType { 
-        kUnknown,
-        kInitializing,
-        kWaitingForBallToAppear,
-        kWaitingForSimulatorArmed,
-        kPausingForBallStabilization,
-        kMultipleBallsPresent,
-        kBallPlacedAndReadyForHit,
-        kHit,
-        kError,
-        kCalibrationResults;
-    }
-
-    public enum IPCMessageType {
-        kUnknown,
-        kRequestForCamera2Image,
-        kCamera2Image,
-        kRequestForCamera2TestStillImage,
-        kResults,
-        kShutdown,
-        kCamera2ReturnPreImage,
-        kControlMessage;
-    }
+    private static Logger LOGGER = Logger.getLogger(MonitorServlet.class.getName());
 
     public enum GsClubType { 
    		kNotSelected,
@@ -109,7 +68,8 @@ public class MonitorServlet extends HttpServlet {
     public static Session producer_session;
     public static Destination producer_destination;
 
-            public static void SetCurrentClubType(GsClubType club) {
+    public static void SetCurrentClubType(GsClubType club) {
+            LOGGER.info("SetClubType called with club type = " + String.valueOf(club));
             System.out.println("SetClubType called with club type = " + String.valueOf(club));
 
             try {
@@ -683,6 +643,8 @@ public class MonitorServlet extends HttpServlet {
             System.out.println("Failed to parse JSON config file: " + e.getMessage());
             return false;
         }
+
+
         System.out.println("Golf Sim Configuration Settings: ");
         System.out.println("  kWebActiveMQHostAddress: " + kWebActiveMQHostAddress);
         System.out.println("  kWebServerTomcatShareDirectory (NOTE - Must be setup in Tomcat's conf/server.xml): " + kWebServerTomcatShareDirectory);
@@ -800,7 +762,7 @@ public class MonitorServlet extends HttpServlet {
             HttpSession httpSession = request.getSession();
             Long times = (Long) httpSession.getAttribute("times");
             if (times == null) {
-              httpSession.setAttribute("times", new Long(0));
+                httpSession.setAttribute("times", Long.valueOf(0));
             }
             
             long value = 1;
